--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.27.5",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
