Refactor early access functionality and improve SEO
- Replaced EarlyAccessModal component with direct Link to /early-access in CTA and Hero sections.
- Removed EarlyAccessModal component and its associated logic from cta.tsx.
- Added FAQ schema for SEO in FAQSection component.
- Updated technology section to reflect GDPR compliance instead of SOC 2 readiness.
- Enhanced language switcher styles for better UI consistency.
- Added early access page metadata and content in multiple languages (de, en, es, fr, pl, pt, sr).
- Updated public documentation to include early access information and links.
- Adjusted manifest.json to correctly link to the early access page.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -61,7 +61,7 @@
       "name": "Request Early Access",
       "short_name": "Early Access",
       "description": "Join the VantumERP pilot program",
-      "url": "/?action=early-access",
+      "url": "/early-access",
       "icons": [{ "src": "/assets/logo.png", "sizes": "192x192" }]
     }
   ],
