--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,25 +12,25 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/new_logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/new_logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/new_logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/logo.png",
+      "src": "/assets/new_logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -62,7 +62,7 @@
       "short_name": "Early Access",
       "description": "Join the VantumERP pilot program",
       "url": "/early-access",
-      "icons": [{ "src": "/assets/logo.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/assets/new_logo.png", "sizes": "192x192" }]
     }
   ],
   "related_applications": [],
